--- a/LittleLemon/LittleLemon/templates/index.html
+++ b/LittleLemon/LittleLemon/templates/index.html
@@ -6,6 +6,6 @@
       <h1 style="text-align:center;">Welcome ToLittleLemon Restaurant</h1>
 
       {% load static %}
-      <img src="{% static 'restaurant/littlelemon.png' %}">
+      <img src="{% static 'restaurant/littlelemon.pçng' %}">
    </body>
 </html>
